[package]
name = "cooked-waker-derive"
version = "1.0.0"
authors = ["Nathan West <Lucretiel@gmail.com>"]
edition = "2018"
readme = "../README.md"
license = "MPL-2.0"
description = "Trait derivations for the cooked-waker"
repository = "https://github.com/Lucretiel/cooked-waker"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "1.0.14"
quote = "1.0.2"
proc-macro2 = "1.0.8"

[lib]
proc-macro = true