[package]
name = "cooked-waker"
version = "1.0.0"
authors = ["Nathan West <Lucretiel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.stowaway]
version = "1.1.0"
optional = true

[dependencies.cooked-waker-derive]
path = "../cooked-waker-derive"
version = "1.0.0"
optional = true

[features]
default = ["derive"]

# Support for deriving IntoWaker and other waker traits
derive = ["stowaway", "cooked-waker-derive"]