[package]
name = "cooked-waker"
version = "1.0.1"
authors = ["Nathan West <Lucretiel@gmail.com>"]
edition = "2018"
readme = "../README.md"
license = "MPL-2.0"
description = "A safe interface for creating async Wakers"
repository = "https://github.com/Lucretiel/cooked-waker"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.stowaway]
version = "1.1.1"
optional = true

[dependencies.cooked-waker-derive]
path = "../cooked-waker-derive"
version = "1.0.1"
optional = true

[features]
default = ["derive"]

# Support for deriving IntoWaker and other waker traits
derive = ["stowaway", "cooked-waker-derive"]